Testingspacing issue

--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@ label {
     display: none;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 700px) {
     label {
         display: block;
         cursor: pointer;
@@ -128,14 +128,6 @@ label {
     #toggle:checked + .menu {
         display: block;
     }
-}
-
-.nav-pills{
-    font-family: 'Roboto Slab', serif;
-    font-size: 3vh;
-    background-color: lightgrey;
-    opacity: 0.8;
-    /* margin-bottom: 10%; */
 }
 
 .pageOne{
